Fix smaller font size on mobile

--- a/src/stardew.scss
+++ b/src/stardew.scss
@@ -45,7 +45,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  font-size: 12pt;
+  font-size: 16px;
   background-color: var(--background-color);
   color: $DARK_TEXT;
 }
@@ -123,7 +123,8 @@ body {
 .main-table {
   // Centers the div
   margin: 0 auto;
-  width: fit-content;
+  max-width: fit-content;
+  overflow-x: auto;
   padding: 10px;
 
   table {
@@ -136,6 +137,9 @@ body {
     padding: 10px;
     background-color: var(--dark-color);
     color: $LIGHT_TEXT;
+
+    // prevent linebreaks on smaller screens
+    white-space: nowrap;
 
     // lightly separate the cells
     border-left: 1px dashed var(--light-color);
@@ -190,7 +194,6 @@ table.sortable thead th[aria-sort="ascending"]::after {
   position: absolute;
   top: 5px;
   right: 5px;
-  min-height: 100%;
 }
 
 .crop-sidetable {
